[tool.poetry]
name = "dial-visualization"
version = "0.5a0"
description = "Plugin for Dial-App. It adds a node that implement diverse visulization techniques for CNN"
authors = ["David Afonso <davafons@gmail.com>","Javier Duque Melguizo <javierduquemelguizo@gmail.com>"]

license = "GPL-3.0-only"

readme = "README.md"

repository = "https://github.com/JDM-ULL-93/Dial-Debugging"
homepage = "https://github.com/JDM-ULL-93/Dial-Debugging"

keywords = ["deep-learning", "dial-app" , "visualization", "CNN"]

[tool.poetry.dependencies]
python = ">=3.6.0,<=3.8.3"
dial-core = { git="https://github.com/JDM-ULL-93/dial-core" }
dial-gui = { git="https://github.com/JDM-ULL-93/dial-gui" }

PySide2 = "^5.12.6"
tensorflow  = "^2.4.0"
Pillow  = "^7.2.0"


[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-qt = "^3.3.0"
pre-commit = "^2.1.1"
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.7.9"
pylint = "^2.4.4"
mypy = "^0.770"
tox = "^3.14.5"
docstr-coverage = "^1.0.5"
taskipy = "^1.2.0"
sphinx = "^2.4.4"
sphinx-rtd-theme = "^0.4.3"
sphinx-autodoc-typehints = "^1.10.3"


[build-system]
requires = ["poetry>=0.12", "setuptools>=35.0.2", "wheel>=0.29.0"]
build-backend = "poetry.masonry.api"
